Sat Jan 13 23:54:48 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_free, ole_type_free, 
	  olemethod_free, olevariable_free, oleparam_free, 
	  ole_event_free): fix memory leak.  [ruby-core:09846]

Fri Jan 12 11:13:55 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/etc/etc.c (etc_getpwuid, etc_getgrgid): fix to correctly
	  convert uid/gid from VALUE. (backport of r11521)

Wed Jan 10 18:57:57 2007  Minero Aoki  <aamine@loveruby.net>

	* ext/strscan/strscan.c (strscan_do_scan): should set kcode option
	  before match. [ruby-dev:29914]

	* test/strscan/test_stringscanner.rb: test it.

	* re.c: export kcode_set_option and kcode_reset_option (with "rb_"
	  prefix).

	* intern.h: ditto.

Tue Jan  9 17:45:17 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (rb_find_file): should not call fpath_check() with NULL.
	  fixed: [ruby-core:09867]

Tue Jan  9 03:54:38 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_upto): String#upto from empty string makes
	  inifinite loop.  [ruby-core:09864]

Sun Jan  7 12:13:26 2007  Eric Hodel  <drbrain@segment7.net> 

	* lib/rdoc/parsers/parse_c.rb (RDoc::C_Parser#find_class_comment):
	  Look for class and module comments above rb_define_class and
	  rb_define_module.  Patch by Daniel Berger <djberg96 at gmail.com>

Sun Jan  7 10:32:12 2007  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/parsers/parse_c.rb (RDoc::C_Parser#handle_constants):
	  Properly handle escaping of : in comments.
	* test/rdoc/parsers/test_parse_c.rb:
	  Test RDoc::C_Parser#do_classes and Rdoc::C_Parser#find_class_comment.

Sun Jan  7 09:33:02 2007  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date/format.rb: updated based on date2 4.0.1.

Wed Jan  3 11:36:51 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (ruby_dup): start GC on ENOMEM as well.

Mon Jan  1 06:13:11 2007  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/parsers/c_parser.rb: Make Rdoc accessible.  Update constant
	value information.