@@ -1,17 +1,15 @@
 #define RUBY_VERSION "1.8.5"
-#define RUBY_RELEASE_DATE "2007-01-13"
+#define RUBY_RELEASE_DATE "2007-01-23"
 #define RUBY_VERSION_CODE 185
-#define RUBY_RELEASE_CODE 20070113
-#define RUBY_PATCHLEVEL 5000
+#define RUBY_RELEASE_CODE 20070123
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 5
 #define RUBY_RELEASE_YEAR 2007
 #define RUBY_RELEASE_MONTH 1
-#define RUBY_RELEASE_DAY 13
+#define RUBY_RELEASE_DAY 23
 
 RUBY_EXTERN const char ruby_version[];
 RUBY_EXTERN const char ruby_release_date[];
 RUBY_EXTERN const char ruby_platform[];
-RUBY_EXTERN const int ruby_patchlevel;
